Bug 466718 - Default-setting 'Snap to image center' shouldn't be activated by default, imo.
Summary: Default-setting 'Snap to image center' shouldn't be activated by default, imo.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 5.1.5
Platform: unspecified All
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-03-02 13:36 UTC by David REVOY
Modified: 2024-11-15 15:11 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2023-03-02 13:36:27 UTC
SUMMARY
Hi, I'm giving Krita courses for a CG school (remotely) since the start of January. Today was lesson 6, and we made some drawings. A student had an issue with his line tool (the Line Tool, or shortcut 'V' in Freehand) both randomly snapping in the void and preventing him to draw a line. They felt it was like magnetized in the void to something.  
It took us a little time to see the "View > Snap > Snap to Image center" was activated by default and line going across this two axis will magnet (and sometimes, render/bake accidentally while snapping)... After we removed the default, other in the class told me they had the same issue. I couldn't experience the issue, because probably my default settings are too old to have Snap options ever activated by default...


STEPS TO REPRODUCE
1. Open Krita (vanilla default settings), and create a new document.
2. Trace lines with the V shortcut while in Freehand, or using the line tool, try around the center of the document.

OBSERVED RESULT
The line will magnet to imaginary axis center guides. It constrains the movement of the users, and they feel the line tool is inaccurate or broken because it is not discoverable that there is a snap function in Krita activated. 

EXPECTED RESULT
Free tracing with line tool, meaning 'Snap to image center' shouldn't be activated by default, IMO.
Thanks! :-)

SOFTWARE/OS VERSIONS
On all OS, 5.1.5.
Comment 1 Reinold Rojas 2024-11-14 02:37:37 UTC
This change makes sense to me. Checked the git history and seems this was set 8 years ago and I don't know if there was a specific reason to have this enabled by default: https://invent.kde.org/graphics/krita/-/commit/d1480b1f0ca24b4d92bd61ed475f0a31b75dab30#e4f1d8720580f0bdc0996771bd22f753aac091cb_0_30

Unless someone has a strong opinion otherwise I'm setting to confirmed.
Comment 2 David REVOY 2024-11-14 06:53:03 UTC
Thank you for reviewing my bug report.
Comment 3 Dmitry Kazakov 2024-11-15 09:29:07 UTC
Hi, David!

Should we also disable snap-to-image-bounds by default?
Comment 4 Dmitry Kazakov 2024-11-15 10:10:55 UTC
Git commit f81c579af0939c4521d5bc7e217220aade1c9bbb by Dmitry Kazakov.
Committed on 15/11/2024 at 10:10.
Pushed by dkazakov into branch 'krita/5.2'.

Disable snapping to image center by default

It seems it disturbs the workflow of the newcoming painters, so there
is no need to keep it on by default.

M  +1    -1    libs/ui/canvas/kis_snap_config.cpp

https://invent.kde.org/graphics/krita/-/commit/f81c579af0939c4521d5bc7e217220aade1c9bbb
Comment 5 Dmitry Kazakov 2024-11-15 10:11:10 UTC
Git commit 5224bfa36e5d03176e143a6db3afa2417c018141 by Dmitry Kazakov.
Committed on 15/11/2024 at 10:11.
Pushed by dkazakov into branch 'master'.

Disable snapping to image center by default

It seems it disturbs the workflow of the newcoming painters, so there
is no need to keep it on by default.

M  +1    -1    libs/ui/canvas/kis_snap_config.cpp

https://invent.kde.org/graphics/krita/-/commit/5224bfa36e5d03176e143a6db3afa2417c018141
Comment 6 David REVOY 2024-11-15 10:36:13 UTC
> Hi, David!
> Should we also disable snap-to-image-bounds by default?

Hey Dmitry, let's keep snap-to-image-bounds activated, imho.

1. I never got feedback that this was problematic, so my lazy brain probably advises leaving it as is.
2. The heart of the problem with the "centre snap" was when drawing with the Freehand Brush tool and when activating the "hold V" keyboard shortcut for the Line tool. I don't think users can really be bothered by the edge snap with this tool. 
3. I think snapping to image boundaries can be very useful when tracing a selection or when tracing with other tools.
Comment 7 Dmitry Kazakov 2024-11-15 14:33:37 UTC
Hi, David!

Thank you for the feedback! :)

> let's keep snap-to-image-bounds activated, imho.

I've left snap-to-image-bounds activate, but added graphical feedback (a red cross sign) when snapping happens. The same feedback is added to the center-of-the image snap strategy, so now it should be a bit easier to detect/understand :)
Comment 8 David REVOY 2024-11-15 15:11:27 UTC
Thank you for adding a visual clue!