Disable snapping to image center by default

It seems it disturbs the workflow of the newcoming painters, so there
is no need to keep it on by default.

BUG:466718