libs/ui/canvas/kis_snap_config.cpp
@@ -15,7 +15,7 @@ KisSnapConfig::KisSnapConfig(bool loadValues)
       m_intersection(false),
       m_boundingBox(false),
       m_imageBounds(true),
-      m_imageCenter(true),
+      m_imageCenter(false),
       m_toPixel(false)
 {
     if (loadValues) {
